# linechef

./: .gitignore  README.md  pyproject.toml
db/: item_caps.csv  levelcaps.txt  move_changes.csv  pokemon.txt  rnb.db  trainer_battles.txt
db/sqls/: check_pokemon_in_db.sql  create_learnset_tables.sql  create_pokemon_tables.sql  find_ability.sql  find_item.sql  get_last_4_moves.sql  get_pokemon_by_trainer_id.sql  get_trainer_id_by_route_and_name.sql  insert_ability.sql  insert_item.sql  insert_move.sql  insert_pokemon_in_db.sql  insert_trainer.sql
src/linechef/: __init__.py  action.py  ai.py  battle_solver.py  battle_state.py  battle_type.py  initialize_db.py  learnset_into_db.py  pokeitem.py  pokemon.py  pokemove.py  pokenature.py  pokestat.py  poketype.py  trainer_battles_to_db.py  update_move_values.py
test/: test_damage_rolls.py  test_get_by_trainer.py
utils/: runandbun.lua
