[project]
name = "linechef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mwklose", email = "markklose17@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
linechef = "linechef:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
