[project]
name = "linechef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mwklose", email = "markklose17@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.9.2",
]

[project.scripts]
linechef = "linechef:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
